--- a/Reservación/Reservación/Properties/Resources.resx
+++ b/Reservación/Reservación/Properties/Resources.resx
@@ -118,6 +118,21 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="departamento_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\source\departamento_0.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="departamento_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\source\departamento_1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="departamento_2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\source\departamento_2.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="departamento_3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\source\departamento_3.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="logo_orange" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\source\logo_orange.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="logo_white" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\source\logo_white.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
