--- a/Reservación/Reservación/Properties/Resources.resx
+++ b/Reservación/Reservación/Properties/Resources.resx
@@ -121,14 +121,62 @@
   <data name="departamento_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\source\departamento_0.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="departamento_0.1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\source\departamento_0.1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="departamento_0.2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\source\departamento_0.2.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="departamento_0.3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\source\departamento_0.3.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="departamento_0.4" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\source\departamento_0.4.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="departamento_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\source\departamento_1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="departamento_1.1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\source\departamento_1.1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="departamento_1.2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\source\departamento_1.2.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="departamento_1.3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\source\departamento_1.3.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="departamento_1.4" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\source\departamento_1.4.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="departamento_2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\source\departamento_2.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="departamento_2.1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\source\departamento_2.1.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="departamento_2.2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\source\departamento_2.2.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="departamento_2.3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\source\departamento_2.3.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="departamento_2.4" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\source\departamento_2.4.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="departamento_3" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\source\departamento_3.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="departamento_3.1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\source\departamento_3.1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="departamento_3.2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\source\departamento_3.2.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="departamento_3.3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\source\departamento_3.3.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="departamento_3.4" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\source\departamento_3.4.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="logo_orange" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\source\logo_orange.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
